reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-core__src__projections.rs_line_892_col_5_001.log

*** crates/tracewake-core/src/projections.rs:892:5: replace phase3a_semantic_actions -> Vec<SemanticActionEntry> with vec![Default::default()]

*** mutation diff:
--- crates/tracewake-core/src/projections.rs
+++ replace phase3a_semantic_actions -> Vec<SemanticActionEntry> with vec![Default::default()]
@@ -884,110 +884,17 @@
 }
 
 fn phase3a_semantic_actions(
     agent_state: Option<&AgentState>,
     source: &EmbodiedProjectionSource<'_>,
     current_place_id: &PlaceId,
     viewer_actor_id: &ActorId,
 ) -> Vec<SemanticActionEntry> {
-    let mut actions = Vec::new();
-    if let Some(sleep_affordance_id) = visible_open_sleep_affordance(source) {
-        actions.push(SemanticActionEntry::with_availability(
-            SemanticActionId::new("sleep.here").unwrap(),
-            ActionId::new("sleep").unwrap(),
-            vec![sleep_affordance_id.to_string()],
-            "Sleep here",
-            ActionAvailability::available(),
-        ));
-    }
-
-    for food_source in &source.actor_known_food_sources {
-        let availability = match food_source.believed_servings {
-            Some(0) => ActionAvailability::disabled(
-                vec![ReasonCode::KnowledgePreconditionNotMet],
-                "You know that food source is empty.",
-                vec![ActionAvailabilityProvenance::new(
-                    ActionAvailabilityProvenanceKind::HolderKnownContext,
-                    source.knowledge_context_id.as_str(),
-                )],
-                Vec::new(),
-            ),
-            _ => ActionAvailability::available(),
-        };
-        actions.push(SemanticActionEntry::with_availability(
-            SemanticActionId::new(format!("eat.food.{}", food_source.food_supply_id.as_str()))
-                .unwrap(),
-            ActionId::new("eat").unwrap(),
-            vec![food_source.food_supply_id.to_string()],
-            format!("Eat {}", food_source.food_supply_id.as_str()),
-            availability,
-        ));
-    }
-
-    for workplace in &source.actor_known_workplaces {
-        let at_workplace = workplace.place_id == *current_place_id;
-        let provenance_refs = workplace_availability_provenance_refs(
-            &source.knowledge_context_id,
-            &workplace.source_event_ids,
-        );
-        let availability = if !at_workplace {
-            ActionAvailability::disabled(
-                vec![ReasonCode::ActorNotAtRequiredPlace],
-                "You are not at that workplace.",
-                provenance_refs,
-                Vec::new(),
-            )
-        } else if !workplace.believed_access_open {
-            ActionAvailability::disabled(
-                vec![ReasonCode::KnowledgePreconditionNotMet],
-                "You know that workplace access is closed.",
-                provenance_refs,
-                Vec::new(),
-            )
-        } else {
-            ActionAvailability::available()
-        };
-        actions.push(SemanticActionEntry::with_availability(
-            SemanticActionId::new(format!("work.block.{}", workplace.workplace_id.as_str()))
-                .unwrap(),
-            ActionId::new("work_block").unwrap(),
-            vec![workplace.workplace_id.to_string()],
-            format!("Work at {}", workplace.workplace_id.as_str()),
-            availability,
-        ));
-    }
-
-    if let Some((intention_id, intention)) = agent_state.and_then(|agent_state| {
-        agent_state
-            .active_intention_by_actor
-            .get(viewer_actor_id)
-            .and_then(|intention_id| {
-                agent_state
-                    .intentions
-                    .get(intention_id)
-                    .map(|intention| (intention_id, intention))
-            })
-    }) {
-        actions.push(SemanticActionEntry::with_availability(
-            SemanticActionId::new(format!("continue.routine.{}", intention_id.as_str())).unwrap(),
-            ActionId::new("continue_routine").unwrap(),
-            vec![
-                intention_id.to_string(),
-                intention
-                    .current_step
-                    .clone()
-                    .unwrap_or_else(|| "wait".to_string()),
-            ],
-            "Continue routine",
-            ActionAvailability::available(),
-        ));
-    }
-
-    actions
+    vec![Default::default()] /* ~ changed by cargo-mutants ~ */
 }
 
 fn workplace_availability_provenance_refs(
     context_id: &HolderKnownContextId,
     source_event_ids: &[EventId],
 ) -> Vec<ActionAvailabilityProvenance> {
     let mut refs = vec![ActionAvailabilityProvenance::new(
         ActionAvailabilityProvenanceKind::HolderKnownContext,


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): the file `crates/tracewake-core/src/projections.rs` has changed (1781904745.879923611s, 5s after last build at 1781904740.995923609s)
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
warning: unused import: `ReasonCode`
 --> crates/tracewake-core/src/projections.rs:3:55
  |
3 |     ProposalSourceContext, ProposalValidationContext, ReasonCode, ReportStatus, ValidationReport,
  |                                                       ^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0277]: the trait bound `SemanticActionEntry: Default` is not satisfied
   --> crates/tracewake-core/src/projections.rs:892:10
    |
892 |     vec![Default::default()] /* ~ changed by cargo-mutants ~ */
    |          ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `SemanticActionEntry`
   --> crates/tracewake-core/src/view_models.rs:202:1
    |
202 | pub struct SemanticActionEntry {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0277`.
warning: `tracewake-core` (lib) generated 1 warning
error: could not compile `tracewake-core` (lib) due to 1 previous error; 1 warning emitted

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error[E0277]: the trait bound `view_models::SemanticActionEntry: Default` is not satisfied
   --> crates/tracewake-core/src/projections.rs:892:10
    |
892 |     vec![Default::default()] /* ~ changed by cargo-mutants ~ */
    |          ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `view_models::SemanticActionEntry`
   --> crates/tracewake-core/src/view_models.rs:202:1
    |
202 | pub struct SemanticActionEntry {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: could not compile `tracewake-core` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
